# async_log

./: .gitignore
include/: async_log.hpp
test/: CMakeLists.txt  test_log.cc
